# multi-party-computation-cryptographic-engine

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.rs  deny.toml  docker-compose.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: cd.yaml  ci.yaml  miri.yaml  release.yaml
config/: controller.toml  ipc.toml  node.toml  vault.toml
proto/engine/v1/: engine.proto
proto/signer/v1/: signer.proto
src/: config.rs  engine.rs  lib.rs  macros.rs  main.rs
src/auth/: bearer_client.rs  bearer_server.rs  context.rs  identity.rs  mod.rs  policy.rs
src/auth/ipc/: auth.rs  config.rs  mod.rs  server.rs
src/auth/ipc/tests/: auth.rs  mod.rs
src/auth/session/: identifier.rs  mod.rs  state.rs  store.rs
src/auth/session/tests/: mod.rs  state.rs  store.rs
src/config/: api.rs  controller.rs  ipc.rs  mod.rs  node.rs
src/engine/: api.rs  builder.rs  core.rs  entry.rs  mod.rs
src/logging/: engine.rs  mod.rs
src/messages/: error.rs  mod.rs
src/messages/transport/: grpc.rs  mod.rs
src/protocols/: algorithm.rs  codec.rs  factory.rs  mod.rs  protocol.rs  signing.rs  types.rs
src/protocols/cggmp24/: ecdsa_secp256k1.rs  mod.rs  pregenerated_primes.rs  security_level.rs  signer_set.rs  stored_key.rs  wire.rs  worker.rs
src/protocols/cggmp24/controller/: mod.rs  protocol.rs
src/protocols/cggmp24/controller/keys/: ecdsa_secp256k1.rs  mod.rs
src/protocols/cggmp24/controller/keys/auxiliary/: ecdsa_secp256k1.rs  mod.rs
src/protocols/cggmp24/controller/tasks/: ecdsa_secp256k1.rs  mod.rs
src/protocols/cggmp24/node/: mod.rs  protocol.rs  worker.rs
src/protocols/cggmp24/node/keys/: ecdsa_secp256k1.rs  mod.rs  worker.rs
src/protocols/cggmp24/node/keys/auxiliary/: ecdsa_secp256k1.rs  mod.rs  worker.rs
src/protocols/cggmp24/node/tasks/: ecdsa_secp256k1.rs  mod.rs  worker.rs
src/protocols/eddsa/: frost_ed25519.rs  mod.rs
src/protocols/frost/: ed25519.rs  mod.rs  schnorr_secp256k1.rs  stored_key.rs  wire.rs
src/protocols/frost/algorithm/: ed25519.rs  mod.rs  schnorr_secp256k1.rs
src/protocols/frost/controller/: keys.rs  mod.rs
src/protocols/frost/controller/keys/: ed25519.rs  mod.rs
src/protocols/frost/controller/tasks/: ed25519.rs  mod.rs  protocol.rs  schnorr_secp256k1.rs
src/protocols/frost/node/keys/: ed25519.rs  mod.rs  protocol.rs  schnorr_secp256k1.rs
src/protocols/frost/node/tasks/: ed25519.rs  mod.rs  protocol.rs  schnorr_secp256k1.rs
src/runtime/: api.rs  controller.rs  mod.rs  node.rs  types.rs
src/secrets/: mod.rs  secret.rs  types.rs
src/secrets/vault/: api.rs  config.rs  hashicorp.rs  key_path.rs  mod.rs
src/service/: api.rs  builder.rs  controller_engine.rs  entry.rs  mod.rs  node_engine.rs  peer_engine.rs
src/transport/: error.rs  errors.rs  mod.rs
src/transport/grpc/: controller_server.rs  mapping.rs  middleware.rs  mod.rs  node_client.rs  node_server.rs
tests/: frost.rs  ipc_grpc_auth.rs  ipc_grpc_errors.rs  ipc_grpc_happy_path.rs  key_generation.rs  primes.rs  signing.rs
tests/fixtures/: paillier_primes.json
tests/helpers/: cluster.rs  config.rs  mock_auth.rs  mock_engine.rs  mock_vault.rs  mod.rs  utils.rs  vault.rs
