[package]
name = "mpc-signer-engine"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Production-grade MPC cryptographic engine."

[dependencies]
rand = "0.9.2"
zeroize = "1.7"
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.17"
anyhow = "1.0"
sha2 = "0.10.9"
prost-types = "0.14.1"
tonic = "0.14.2"
prost = "0.14.1"
hex = "0.4.3"
config = "0.15.19"
uuid = { version = "1.19.0", features = ["v4"] }
tonic-prost = "0.14.2"
tokio-stream = "0.1.17"

[features]
default = []

[build-dependencies]
tonic-prost-build = "0.14.2"
