[package]
name = "mpc-signer-engine"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Production-grade MPC cryptographic engine."

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
rand = "0.9.2"
zeroize = "1.8"
subtle = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.18"
anyhow = "1.0"
sha2 = "0.10.9"
prost-types = "0.14.3"
tonic = "0.14.2"
prost = "0.14.3"
hex = "0.4.3"
config = "0.15.19"
uuid = { version = "1.19.0", features = ["v4"] }
tonic-prost = "0.14.2"
tokio-stream = "0.1.18"
frost-ed25519 = "2.2.0"
strum = "0.27.2"
strum_macros = "0.27.2"
rkyv = "0.8.14"
postcard = "1.1.3"
# Note: rand_core version 0.6 is required for other cryptographic crates 
# compatibility, versions 0.9+ are not compatible.
rand_core = { version = "0.6.4", features = ["getrandom"] }
futures = "0.3.31"
async-trait = "0.1.89"
vaultrs = "0.7.4"
base64 = "0.22.1"
figment = { version = "0.10.19", features = ["env"] }
once_cell = "1.21.3"
dotenvy = "0.15.7"

[features]
default = []

[build-dependencies]
tonic-prost-build = "0.14.2"
